2007-08-31  Ankit Jain  <jankit@novell.com>

	* Templates/WebApplication.xpt.xml: Set BuildAction for aspx file to
	FileCopy.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetAddIn.addin.xml, AspNetAddIn.mdp, Makefile.am: Reorganized the
	  extension point hierarchy. Embedded all add-in manifests as resources.

2007-08-01  Michael Hutchinson <m.j.hutchinson@gmail.com>

	* AspNetAppProject.cs: Fix the IDeployable implementation. The target
	  directory names should be handled by an ASP.NET-specific
	  IDirectoryResolver, not the GetDeployFiles method.

2007-07-25  Lluis Sanchez Gual <lluis@novell.com> 

	* AspNetAddIn.mdp: Updated.

2007-06-19  Michael Hutchinson <m.j.hutchinson@gmail.com> 

	* Project/CodeBehind.cs: Oops, remove some development code in which 
	  caused sharing violations.

2007-06-19  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/AspNetAddIn.AspNetConfigurationPanelWidget.cs,
	  AspNetAddIn.mdp: Changed some old 2.4 dependencies to 2.8. Use
	  GettextCatalog for localizable strings.

2007-06-18  Michael Hutchinson <m.j.hutchinson@gmail.com> 

	* Gui/AspNetConfigurationPanel.cs,
	  Gui/AspNetConfigurationPanelWidget.cs, AspNetAddIn.glade,
	  gtk-gui/generated.cs,
	  gtk-gui/AspNetAddIn.AspNetConfigurationPanelWidget.cs,
	  gtk-gui/objects.xml, gtk-gui/gui.stetic: More Stetic! Convert
	  configuration panel widget from Glade to Stetic.
	* Project/CodeBehind.cs: Some shared code for handling CodeBehind.
	* Project/VerifyCodeBehindBuildStep.cs: Use partial classes if they're
	  present.
	* Project/AspNetAppProjectConfiguration.cs: Silence the error when user
	  picks non-library target type. Rename AutoGenerateCodeBehindMembers
	  to GenerateNonPartialCodeBehindMembers.
	* Project/AspNetCodeBehindProvider.cs: Use code from Codebehind class.
	* AspNetAddIn.mdp, Makefile.am: Added files.

2007-06-08 Michael Hutchinson <m.j.hutchinson@gmail.com>

	* Parser/Document.cs: Report parse errors on console, not in dialogue.
	