@@ -8,7 +8,7 @@
 //  </autogenerated>
 // ------------------------------------------------------------------------------
 
-using MonoDevelop.Core.Properties;
+using MonoDevelop.Core;
 
 namespace AspNetAddIn
 {	
@@ -17,12 +17,12 @@ namespace AspNetAddIn
 		AspNetAppProjectConfiguration configuration;
 		AspNetAppProject project;
 		
-		public AspNetConfigurationPanelWidget (IProperties customizationObject)
+		public AspNetConfigurationPanelWidget (Properties customizationObject)
 		{
 			this.Build();
 			
-			configuration = (AspNetAppProjectConfiguration)((IProperties)customizationObject).GetProperty("Config");
-			project = (AspNetAppProject)((IProperties)customizationObject).GetProperty("Project");
+			configuration = ((Properties)customizationObject).Get<AspNetAppProjectConfiguration> ("Config");
+			project = ((Properties)customizationObject).Get<AspNetAppProject> ("Project");
 				
 			autoGenerateNonPartialCodeBehind.Active = configuration.GenerateNonPartialCodeBehindMembers;
 		}
